// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file resource e2e file resource test: File create 1`] = `
Object {
  "content": "Hello, world!",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File create plan 1`] = `
Object {
  "currentState": undefined,
  "describe": "Write file.txt",
  "newState": "Hello, world!",
}
`;

exports[`file resource e2e file resource test: File destroy 1`] = `
Object {
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update 1`] = `
Object {
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update plan 1`] = `
Object {
  "currentState": undefined,
  "describe": "Write file.txt",
  "newState": "Hello, world!1",
}
`;
